--- a/06Java基础阶段/02我的笔记/设计模式1.md
+++ b/06Java基础阶段/02我的笔记/设计模式1.md
@@ -71,9 +71,12 @@ static {
 ```java
 //懒汉式（线程不安全）
 public class Singleton3 {
-    private static  Singleton3 instance;
+    //1、构造方法私有化
     private Singleton3(){
     }
+    
+    //2、本类内部定义对象
+    private static Singleton3 instance;
 
     //提供一个静态的公有方法，当使用到该方法时，才去创建instance
     public static Singleton3 getInstance(){
@@ -109,7 +112,7 @@ public static synchronized Singleton4 getInstance(){
 
 因此，在实际开发中，不推荐使用这种方式。
 
-**懒汉式（线程安全，同步代码块）**
+**懒汉式（同步代码块）**
 
 ```java
 public static  Singleton5 getInstance(){
@@ -144,7 +147,7 @@ public class Singleton6 {
 			 * 就很快退出。
 			 * 在大if()之外的代码此时不会符合条件，直接返回instance。
 			 */
-            synchronized (Singleton.class){
+            synchronized (Singleton6.class){
                 if (instance == null){
                     instance = new Singleton6();
                 }
@@ -265,7 +268,11 @@ enum SingletonEnum{
 
 #### 简单工厂模式
 
-1. **创建Car接口**
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521221713724.png" alt="image-20200521222459636" style="zoom: 50%;" />
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/Car-1601170652128.png" alt="Car" style="zoom:67%;" />
+
+1. 创建Car接口
 
 ```java
 public interface Car {
@@ -273,7 +280,7 @@ public interface Car {
 }
 ```
 
-2. **创建车工厂**
+2. 创建车工厂
 
 ```java
 public class CarFactory {
@@ -294,7 +301,7 @@ public class CarFactory {
 + 车工厂就是来拿车的，我们只需要传入车的名字即可。
 + 加入要增加一辆车，我们需要对上面的代码进行修改(这不符合开闭原则，用户对修改是关闭的)。
 
-3. **车的实现类**
+3. 车的实现类
 
 ```java
 public class WuLing implements Car {
@@ -312,7 +319,7 @@ public class Tesla implements Car {
 }
 ```
 
-4. **消费者实现类**
+4. 消费者实现类
 
 ```java
 public class Consume {
@@ -328,19 +335,21 @@ public class Consume {
 }
 ```
 
+
+
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521222459636.png" alt="image-20200521221713724" style="zoom:80%;" />
+
+
 
 通过代码，我们可以看出：
 
 （1）简单工厂CarFactory包含必要的判断逻辑，实现了对象的创建和使用的分离。
 
-（2）客户端无需知道所创建的具体产品类的类名，只需要具体产品类对应的参数即可。
+（2）客户端无须知道所创建的具体产品类的类名，只需要具体产品类对应的参数即可。
 
 （3）在不修改任何客户端代码的情况下更换和增加新的具体产品类，在一定程度上提高了系统的灵活性，但是这导致工厂类的职责过重，在一定程度上违反了开闭原则。
 
 #### 工厂方法模式
-
-<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521221713724.png" alt="image-20200521222459636" style="zoom:67%;" />
 
 1、创建车工厂接口
 
@@ -373,7 +382,7 @@ public class TeslaFactory implements CarFactory{
 }
 ```
 
-3. **消费者实现类**
+3. 消费者实现类
 
 ```java
 public class Consume {
@@ -393,7 +402,9 @@ public class Consume {
 
 （2）在增加新产品的时候，只需要增加对应的工厂就好。但是也带来了额外的开销。
 
-<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521222921724.png" alt="image-20200521232243567" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/Car-1601171404310.png" alt="Car" style="zoom:50%;" />
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521222921724.png" alt="image-20200521232243567" style="zoom: 67%;" />
 
 前面都是针对一个产品族的设计，如果有多个产品族的话，就可以使用下面的抽象工厂模式。
 
@@ -1625,111 +1636,7 @@ v2--->Visio{name='xiaolun', createTime=Tue Jun 23 16:54:40 CST 2020}
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200922185838598.png" alt="image-20200922185838598" style="zoom:80%;" />
 
-# 2 结构型模式
-
-## 1、结构型模式
-
-作用：在程序的结构上松耦合，从而扩大整体的类结构，用来解决更大的问题。
-
-该模式使得原本由于接口不兼容而不能在一起工作的那些类可以一起工作。
-
-**角色分析**
-
-+ 目标接口：客户所希望的接口（`USB`），目的可以是具体的或抽象的类，也可以是接口。
-+ 需要适配的类：需要适配的类或适配类（网线接口）。
-+ 适配器：通过包装一个需要适配的对象，把原接口转换成目标接口。
-
-<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200626180310434.png" alt="image-20200623150916769" style="zoom:80%;" />
-
-**对象适配器的特点**
-
-+ 一个对象适配器可以把多个不同的适配者适配到同一个目标。
-
-**类适配器缺点**
-
-+ 对于Java，C#不支持多重类继承的语言，一次最多只能适配一个适配类，不能同时适配多个适配者。类适配器模式中的目标抽象类只能为接口，不能为类，其使用具有一定的局限性。
-
-**输入场景**
-
-可以将输入的字节流变成字符流。
-
-### 测试
-
-1. **需要适配的类**
-
-```java
-/**
- * 适配器模式
- * 1. 要被适配的类：网线。
- */
-public class Adaptee {
-
-    public void request(){
-        System.out.println("连接网线上网");
-    }
-}
-```
-
-2. **适配器**
-
-```java
-//接口转换器的抽象实现。
-public interface NetToUsb {
-
-    //处理请求，网线插到USB上。
-    void handlerRequest();
-}
-```
-
-```java
-public class Adapter2 implements NetToUsb {
-
-    private Adaptee adaptee; //网线私有，组合到这里来了。
-
-    //在创建网线类的时候，将网线插进去即可。
-    public Adapter2(Adaptee adaptee) {
-        this.adaptee = adaptee;
-    }
-
-    @Override
-    public void handlerRequest() {
-        adaptee.request();
-    }
-}
-```
-
-3. **测试类**
-
-```java
-/**
- * 客户端类：电脑，想上网，插不上网线。
- */
-public class Computer {
-
-    //我们的电脑需要连接我们的转接器才能够上网
-    public void net(NetToUsb adapter){
-        //上网的具体实现，找一个转接头
-        adapter.handlerRequest();
-    }
-
-    public static void main(String[] args) {
-        //电脑，适配器，网线
-        Computer computer = new Computer(); //电脑
-        Adaptee adaptee = new Adaptee(); //网线
-        Adapter2 adapter = new Adapter2(adaptee); //适配器器
-
-        computer.net(adapter);
-    }
-}
-```
-
-控制台输出：
-
-```imi
-连接网线上网
-```
-
-## 2、桥接模式（Bridge）
+## 7、桥接模式（Bridge）
 
 ### 1、介绍
 
