--- a/06Java基础阶段/02我的笔记/注解和反射学习.md
+++ b/06Java基础阶段/02我的笔记/注解和反射学习.md
@@ -101,29 +101,29 @@ public class Test01 {
 }
 ```
 
-## 2 反射
+# 2 反射
 
 ## 2.1 Java放射概述
 
-1. Reflection(反射)是Java被认为动态语言的关键，反射机制允许程序在执行期间借助于Relection API获取任何类的内部信息，并能够直接操作任意对象的内部属性及方法。
+1、Reflection(反射)是Java被认为动态语言的关键，反射机制允许程序在执行期间借助于Relection API获取任何类的内部信息，并能够直接操作任意对象的内部属性及方法。
 
 ```java
 Class c = Class.forName("java.lang.String");
 ```
 
-2. 当加载完类之后，在堆内存的方法区中就产生了一个Class类型的对象（一个类只有一个Class对象），这个对象就包含了完整的类的结构信息。我们可以通过这个对象可以看到类的结构。这个对象就包含了完整的类的结构信息。我们可以通过这个对象看到类的结构。这个对象就像一面镜子，透过这个镜子看到类的结构，所以，我们形象的称之为：反射。
+2、当加载完类之后，在堆内存的方法区中就产生了一个Class类型的对象（一个类只有一个Class对象），这个对象就包含了完整的类的结构信息。我们可以通过这个对象可以看到类的结构。这个对象就包含了完整的类的结构信息。我们可以通过这个对象看到类的结构。这个对象就像一面镜子，透过这个镜子看到类的结构，所以，我们形象的称之为：反射。
 
-   正常方式：
+（1）正常方式
 
-   + 引入需要的“包类”名称 -> 通过new实例化  -> 取得实例化对象。
+引入需要的“包类”名称 -> 通过new实例化  -> 取得实例化对象。
 
-   反射方式：
+（2）反射方式
 
-   + 实例化对象-> getClass()方法 -> 得到完整的“包类”名称。
+实例化对象-> getClass()方法 -> 得到完整的“包类”名称。
 
 ## 2.2 获取反射对象
 
-1. 反射机制提供的功能
+1、反射机制提供的功能
 
 + 在运行时判断任意一个对象所属的类
 + 在运行时判断任意一个类所具有的成员变量和方法
@@ -133,22 +133,26 @@ Class c = Class.forName("java.lang.String");
 + 在运行时处理注解
 + 生成动态代理
 
-2. 反射的优缺点
+2、反射的优缺点
 
-+ 优点：可以实现动态创建对象和编译，体现出很大的灵活性。
-+ 缺点：对性能有影响。使用反射基本上是一种解释操作，我们告诉`JVM`，希望做什么并且它满足我们的要求。这类操作总是慢于直接执行的操作。
+（1）优点：可以实现动态创建对象和编译，体现出很大的灵活性。
 
-3. 反射相关的API
+（2）缺点：对性能有影响。使用反射基本上是一种解释操作，我们告诉`JVM`，希望做什么并且它满足我们的要求。这类操作总是慢于直接执行的操作。
 
-+ java.lang.Class:代表一个类。
-+ java.lang.reflect.Method:代表类的方法。
-+ java.lang.reflect.Field:代表类的成员变量。
-+ java.lang.reflect.Constructor:代表类的构造器。
+3、反射相关的API
+
+```
+java.lang.Class:代表一个类（表示一个通用的类，描述类的类）。
+java.lang.reflect.Method:代表类的方法。
+java.lang.reflect.Field:代表类的成员变量。
+java.lang.reflect.Constructor:代表类的构造器。
+```
 
 ```java
 public class Test02 {
     public static void main(String[] args) throws ClassNotFoundException {
         //通过反射获取类的Class对象（包名+类名）
+       // Class称为反射的源头
         Class c1 = Class.forName("com.xiaolun.User");
         System.out.println(c1);
         System.out.println(c1.hashCode());
@@ -199,20 +203,21 @@ class User {
 }
 ```
 
-+ 通过反射获取类的Class对象（包名+类名）.
-+ `c1.hashCode() = c2.hashCode()`，即一个类在内存中只有一个Class对象，
-  一个类被加载后，类的整个结构都会被封装在Class对象中
+（1）通过反射获取类的Class对象（包名+类名）.
 
-+ 使用下面方式获取`Class`类的对象
+（2）`c1.hashCode() = c2.hashCode()`，即一个类在内存中只有一个Class对象，一个类被加载后，类的整个结构都会被封装在Class对象中。
+
+（3）使用下面方式获取`Class`类的对象
 
 ```java
 public final Class getClass()
 ```
 
-+ 在Object类中定义了这个方法，此方法将被所有子类继承。
-+ 该方法的返回值的类型是一个Class类，此类就是Java反射的源头,实际上所有反射从程序运行结果来看就是：可以通过对象反射求出类的名称。
+在Object类中定义了这个方法，此方法将被所有子类继承。该方法的返回值的类型是一个Class类，此类就是Java反射的源头,实际上所有反射从程序运行结果来看就是：可以通过对象反射求出类的名称。
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200504202013961.png" alt="image-20200504202013961" style="zoom:50%;" />
+
+（4）通过直接new的方式或者反射的方式可以调用公共的结构，开发中建议使用new的方式。当我们编译的时候无法确定造那个类的对象时，应该使用反射的方式。
 
 ## 2.3 得到类的几种方式
 
@@ -228,7 +233,7 @@ public final Class getClass()
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200504203428478.png" alt="image-20200504203428478" style="zoom:80%;" />
 
-+ Class类的创建方式
+Class类的创建方式
 
 ```java
 public class Test03 {
@@ -287,7 +292,7 @@ class Teacher extends Person{
 
 ## 2.4 所有类型的Class对象
 
-1. 可以有Class对象的类型
+1、可以有Class对象的类型
 
 + class:外部类，成员（成员内部类，静态内部类）、局部内部类和匿名内部类。
 + interface:接口。
@@ -327,17 +332,27 @@ public class Test04 {
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200504213608267.png" alt="image-20200504213608267" style="zoom:80%;" />
 
-1. 类的加载与ClassLoader的理解
+1、类的加载与ClassLoader的理解
 
-+ 加载：将class文件字节码内容加载到内存中，并将这些静态数据转换成方法区的运行数据结构，然后生成一个代表这个类的java.lang.Class对象。
-+ 链接：将Java类的二进制代码合并到JVM的运行状态之中的过程。
-  + 验证：确保加载的类信息符合JVM规范，没有安全方面的问题。
-  + 准备：正式为类变量（static）分配，并设置类变量默认初始化阶段，这些内存将在方法区中进行分配。
-  + 解析：虚拟机常量池内的符号引用（常量名）替换为直接引用（地址）的过程。
-+ 初始化：
-  + 执行类构造器`<clinit>()`方法的过程，该方法是由编译器自动收集类中所有类变量的赋值和静态代码块中语句合并产生的。（类构造器是构造类信息的，不是构造类对象的构造器）
-  + 当初始化一个类的时候，如果发现其父类还没有进行初始化，则需要先触发其父类的初始化。
-  + 虚拟机会保证一个类的`<clinit>()`方法在多线程中被正确加锁和同步。
+（1）加载
+
+将class文件字节码内容加载到内存中，并将这些静态数据转换成方法区的运行数据结构，然后生成一个代表这个类的java.lang.Class对象。
+
+（2）链接
+
+将Java类的二进制代码合并到JVM的运行状态之中的过程。
+
++ 验证：确保加载的类信息符合JVM规范，没有安全方面的问题。
++ 准备：正式为类变量（static）分配，并设置类变量默认初始化阶段，这些内存将在方法区中进行分配。
++ 解析：虚拟机常量池内的符号引用（常量名）替换为直接引用（地址）的过程。
+
+（3）初始化
+
+执行类构造器`<clinit>()`方法的过程，该方法是由编译器自动收集类中所有类变量的赋值和静态代码块中语句合并产生的。（类构造器是构造类信息的，不是构造类对象的构造器）
+
+当初始化一个类的时候，如果发现其父类还没有进行初始化，则需要先触发其父类的初始化。
+
+虚拟机会保证一个类的`<clinit>()`方法在多线程中被正确加锁和同步。
 
 ```java
 public class Test05 {
@@ -360,7 +375,7 @@ class A{
 }
 ```
 
-+ 执行结果：
+执行结果：
 
 ```java
 A类静态代码快初始化
@@ -368,21 +383,21 @@ A类的无参构造代码块
 100
 ```
 
-+ 执行顺序
+执行顺序：
 
-  + 加载到内存，会产生一个类对应的Class对象。
++ 加载到内存，会产生一个类对应的Class对象。
 
-  + 链接，链接结构，m = 0（初始值）。
++ 链接，链接结构，m = 0（初始值）。
 
-  + 初始化（静态代码块中语句的合并）：
++ 初始化（静态代码块中语句的合并）：
 
-    ```java
-    <clinit>(){
-    	  System.out.println("A类静态代码快初始化");
-            m = 300;
-            m = 100; //所以，最后产生的m值等于100。
-    	}
-    ```
+  ```java
+  <clinit>(){
+  	  System.out.println("A类静态代码快初始化");
+          m = 300;
+          m = 100; //所以，最后产生的m值等于100。
+  	}
+  ```
 
 + 流程讲解图
 
@@ -430,14 +445,15 @@ class Son extends Father{
 }
 ```
 
-+ ```java
-  //控制台输出结果
-  Main类被加载
-  父类被加载
-  子类被加载
-  ```
+控制台输出结果：
 
-  
+```
+Main类被加载
+父类被加载
+子类被加载
+```
+
+
 
 1. 类的被动调用（不会发生类的初始化）
 
@@ -481,26 +497,40 @@ class Son extends Father{
 }
 ```
 
-+ ```java
-  //控制台输出
-  Main类被加载
-  父类被加载
-  2
-  ```
+控制台输出：
 
-## 2.7 类加载器的作用
+```
+Main类被加载
+父类被加载
+2
+```
 
-1. 类加载器的作用
+## 2.7 ClassLoader
+
+1、类的加载过程
+
+程序经过java.exe命令之后，会生成一个或多个字节码文件（.class结尾），接着我们使用java.exe命令对某个字节码文件进行解释运行。相当于将该字节码文件加载到内存中，此过程叫做类的加载。
+
+加载到内存中的类，我们就称为运行时类，此运行类，就作为Class的一个实例。
+
+```java
+//显式使用
+Class c1 = Person.class;
+```
+
+2、类加载器的作用
 
 将class文件字节码内容加载到内存中，并将这些静态数据转化成方法区的运行时数据结构，然后再堆中生成一个代表这个类的java.lang.Class对象，作为方法区中类数据的访问入口。
 
-2. 类缓存
+3、类缓存
 
 标准的JavaSE类加载器可以按要求查找类，但一旦某个类被加载到类加载器中，它将维持加载（缓存）一段时间。不过，JVM垃圾回收机制可以回收这些Class对象。
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200505204847707.png" alt="image-20200505204847707" style="zoom:80%;" />
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200505204939144.png" alt="image-20200505204939144" style="zoom:80%;" />
+
+4、代码
 
 ```java
 public class Test07 {
@@ -532,7 +562,7 @@ public class Test07 {
     }
 ```
 
-+ 运行结果
+运行结果：
 
 ```java
 sun.misc.Launcher$AppClassLoader@18b4aac2
@@ -541,33 +571,12 @@ null
 sun.misc.Launcher$AppClassLoader@18b4aac2
 null
      /**
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\charsets.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\deploy.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\access-bridge-64.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\cldrdata.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\dnsns.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\jaccess.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\jfxrt.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\localedata.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\nashorn.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\sunec.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\sunjce_provider.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\sunmscapi.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\sunpkcs11.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\ext\zipfs.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\javaws.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\jce.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\jfr.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\jfxswt.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\jsse.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\management-agent.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\plugin.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\resources.jar;
-         *   C:\Program Files\Java\jdk1.8.0_131\jre\lib\rt.jar;
          *   D:\a22IDEA\Annotation_fanshe\out\production\Annotation_fanshe;
          *   D:\a22IDEA\install200226\IntelliJ IDEA 2019.3.3\lib\idea_rt.jar
          */
 ```
+
+
 
 ## 2.8 获取类的运行时结构
 
@@ -579,7 +588,6 @@ Field、Method、Constructor、Superclass、Interface、Annotation。
 + 所继承的父类
 + 全部的构造器
 + 全部的Filed方法
-+ ... 
 
 ```java
 public class Test08 {
@@ -632,7 +640,7 @@ public class Test08 {
 }
 ```
 
-+ 运行结果
+运行结果：
 
 ```java
 com.xiaolun.User
@@ -951,12 +959,82 @@ class Student2{
 }
 ```
 
-+ 输出结果：
+输出结果：
 
-  ```java
-  @com.Tablelun(value=db_student)
-  db_student
-  db_name
-  varchar
-  3
-  ```
+```java
+@com.Tablelun(value=db_student)
+db_student
+db_name
+varchar
+3
+```
+
+## 2.13 体会反射的动态性
+
+动态性：在运行程序时根据某些条件创建代码。
+
+```java
+import java.util.Random;
+
+public class ReflationTest {
+   public static void main(String[] args) {
+      int num = new Random().nextInt(3); //0,1,2
+      String classPath = "";
+      switch (num) {
+         case 0:
+            classPath = "java.util.Date";
+            break;
+         case 1:
+            classPath = "com.xiaolun.Person";
+            break;
+         default:
+            break;
+      }
+      Object obj = getInstance(classPath);
+      System.out.println(obj);
+   }
+
+   /**
+    * 创建一个指定的类的对象
+    * classPath：指定类的全类名
+    */
+   public static Object getInstance(String classPath) {
+      try {
+         Class clazz = Class.forName(classPath);
+         return clazz.newInstance();
+      } catch (Exception e) {
+         e.printStackTrace();
+      }
+      return null;
+   }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
