--- a/06Java基础阶段/02我的笔记/设计模式1.md
+++ b/06Java基础阶段/02我的笔记/设计模式1.md
@@ -414,7 +414,7 @@ public class Consume {
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521232243567.png" alt="image-20200521232141716" style="zoom: 33%;" />
 
-
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/Client.png" alt="Client" style="zoom: 50%;" />
 
 产品等级：小米手机和华为手机就是一个产品等级结构。
 
@@ -1482,7 +1482,9 @@ Java中Object类是所有类的根类，Object类提供了一个clone()方法，
 
 原型模式是一种创建型设计模式，允许一个对象再创建另外一个可定制的对象， 无需知道如何创建的细节。
 
-1. **原型**
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/Video.png" alt="Video" style="zoom:67%;" />
+
+1. 原型
 
 ```java
 /**
@@ -1536,7 +1538,7 @@ public class Video implements Cloneable{
 }
 ```
 
-2. **复制者**
+2. 复制者
 
 ```java
 public class Bibi {
@@ -1568,7 +1570,7 @@ v2的hascode()---->21685669
 
 但是上面的克隆属于浅克隆，当`v1`对应的时间发生变化的时候，v2对应的时间也发生变化，这是我们不想看到的，我们应该进行深克隆。
 
-<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623170100439.png" alt="image-20200623170100439" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623170100439.png" alt="image-20200623170100439" style="zoom: 67%;" />
 
 ### 1、深克隆
 
@@ -1600,7 +1602,7 @@ v2的hascode()---->21685669
  //需要将这个对象的属性也进行克隆，然后将新属性赋值给新的对象。对引用类型的属性，进行单独处理
         Video v = (Video)obj;
         v.createTime = (Date) this.createTime.clone();
-        return obj;
+        return v;
     }
 ```
 
