--- a/08算法/02我的笔记/递归和回溯.md
+++ b/08算法/02我的笔记/递归和回溯.md
@@ -51,3 +51,47 @@ public class RecursionTest {
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200926184638980.png" alt="image-20200926184638980" style="zoom: 67%;" />
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200927102501032.png" alt="image-20200927102501032" style="zoom: 67%;" />
+
+3、案例3
+
+```java
+public class RecursionTest {
+   public static void main(String[] args) {
+      System.out.println(test2(4)); //10
+   }
+
+   public static int test2(int n) {
+      if (n > 2) {
+         return test2(n - 1);
+      } else {
+         return 10;
+      }
+   }
+}
+```
+
+在n=3时，执行test2（2），压入栈中，然后在n=2时，return 10，将返回值带给test2（3）.
+
+可以发现，当n = 足够大的数，在最后一次n=2，return 10后，全部返回到test2（n）中。
+
+4、阶乘-返回值
+
+```java
+public class RecursionTest {
+   public static void main(String[] args) {
+      System.out.println(factorial(5));
+   }
+
+   public static int factorial(int n) {
+      if (n == 1) {
+         return 1;
+      } else {
+        //返回值的话，我们只看最后return就好了,此时
+        //factorial(n - 1) 就等于 return value（返回）
+         return n * factorial(n - 1);
+      }
+   }
+}
+```
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200928163526110.png" alt="image-20200928163526110" style="zoom:67%;" />
